--- a/devlaptop-playbook.yml
+++ b/devlaptop-playbook.yml
@@ -21,6 +21,7 @@
     sudo: yes
     apt:
       name: "{{item}}"
+      update_cache: yes
       state: present
     with_items:
       - htop
@@ -92,6 +93,7 @@
       - volti
       - feh
       - lm-sensors
+      - skype
 
       # packages not available
       # apt-fast
