--- a/devlaptop-playbook.yml
+++ b/devlaptop-playbook.yml
@@ -34,6 +34,8 @@
       state: present
     with_items:
       - htop
+      - python-dev
+      - python3-dev
       - vim
       - git
       - gcalcli
@@ -105,6 +107,10 @@
       - skype
       - apt-fast
       - i3status
+      # YouCompleteMe vim plugin
+      - ycmd
+      - build-essential
+      - xbacklight
 
       # packages not available
       # apt-fast
