--- a/devlaptop-playbook.yml
+++ b/devlaptop-playbook.yml
@@ -33,6 +33,7 @@
       update_cache: yes
       state: present
     with_items:
+      - tree
       - htop
       - python-dev
       - python3-dev
