Added build dependencies for Python 2.7

--- a/devlaptop-playbook.yml
+++ b/devlaptop-playbook.yml
@@ -116,6 +116,49 @@
       - xbacklight
       - traceroute
 
+      # Frac build
+      - libbz2-dev
+      - gperf
+      - re2c
+      - libsqlite3-dev
+      ## for building Python 2.7
+      - gcc-multilib
+      - g++-multilib
+      - libffi-dev
+      - libffi6
+      - libffi6-dbg
+      - python-crypto
+      - python-mox3
+      - python-pil
+      - python-ply
+      - libssl-dev
+      - zlib1g-dev
+      - libbz2-dev
+      - libexpat1-dev
+      - libbluetooth-dev
+      - libgdbm-dev
+      - dpkg-dev
+      - quilt
+      - autotools-dev
+      - libreadline-dev
+      - libtinfo-dev
+      - libncursesw5-dev
+      - tk-dev
+      - blt-dev
+      - libssl-dev
+      - zlib1g-dev
+      - libbz2-dev
+      - libexpat1-dev
+      - libbluetooth-dev
+      - libsqlite3-dev
+      - libgpm2
+      - mime-support
+      - netbase
+      - net-tools
+      - bzip2
+
+
+
       # VPN (20160301 - VPN crashes with double free error if .ike/sites/xxx not found)
       - ike
       # - ike-qtgui
