use get_url instead of wget

--- a/roles/devlaptop/handlers/main.yml
+++ b/roles/devlaptop/handlers/main.yml
@@ -21,3 +21,6 @@
   shell: ./install.py --clang-completer
   args:
     chdir: '~/.vim/bundle/YouCompleteMe'
+
+- name: DUMMYHANDLER
+  shell: echo DUMMY!!!
