Update apt cache only once (in handler)

--- a/roles/devlaptop/handlers/main.yml
+++ b/roles/devlaptop/handlers/main.yml
@@ -22,5 +22,5 @@
   args:
     chdir: '~/.vim/bundle/YouCompleteMe'
 
-- name: DUMMYHANDLER
-  shell: echo DUMMY!!!
+- name: Update APT cache
+  shell: apt-get update
