--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -1,4 +1,17 @@
 ---
+- name: install packages for vim
+  sudo: yes
+  apt:
+    name: "{{item}}"
+    state: present
+  with_items:
+    - silversearcher-ag
+    - ack-grep
+    - vim
+    - vim-syntax-docker
+    - exuberant-ctags
+    # YouCompleteMe vim plugin
+    - ycmd
 
 - name: Install .vimrc file
   template:
