--- a/roles/xmonad/tasks/main.yml
+++ b/roles/xmonad/tasks/main.yml
@@ -20,5 +20,15 @@
     - xbacklight
 
 - name: Kde & xmonad | Make xmonad window manager for KDE
-  template: src=templates/xmonad/set_window_manager.sh.j2 dest=~/.config/plasma-workspace/set_window_manager.sh
+  template: src=templates/set_window_manager.sh.j2 dest=~/.config/plasma-workspace/set_window_manager.sh
 
+- name: .xmonad dir
+  file: path=~/.xmonad state=directory
+
+- name: xmonad.hs (xmonad config file)
+  template: src=templates/xmonad.hs.j2 dest=~/.xmonad/xmonad.hs
+  notify:
+    - recompile xmonad
+
+- name: .xsesion file
+  template: src=templates/xsession.j2 dest=~/.xsession
