--- a/roles/pycharm/tasks/main.yml
+++ b/roles/pycharm/tasks/main.yml
@@ -14,3 +14,9 @@
 - name: create PyCharm link
   sudo: yes
   file: src={{pycharm_install_dir}}/{{pycharm_dir}}/bin/pycharm.sh dest=/usr/local/bin/pycharm   state=link 
+
+
+- name: Install IdeaVim plugin config
+  template: 
+    src: templates/idearc.j2
+    dest: ~/.idearc
