--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -5,6 +5,8 @@
     name: "{{item}}"
     state: present
   with_items:
+    - python-pep8
+    - python-autopep8
     - silversearcher-ag
     - ack-grep
     - vim
