Added libSDL development libs

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -148,6 +148,8 @@
     - xbacklight
     - traceroute
     - cabal-install
+    - libsdl2-dev
+    - libsdl2-image-dev
 
     # packages not available
     # apt-fast
