--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,12 +1,22 @@
 ---
 
-- name: install packages for docker
+
+- name: Install Docker repository key
   sudo: yes
-  apt:
-    name: "{{item}}"
+  apt_key:
+    id: 58118E89F3A912897C070ADBF76221572C52609D
+    keyserver: hkp://p80.pool.sks-keyservers.net:80
     state: present
-  with_items:
-    - docker.io
+
+- name: Add Docker repository
+  sudo: yes
+  apt_repository:
+    repo: deb https://apt.dockerproject.org/repo {{ ansible_lsb.id|lower }}-{{ ansible_lsb.codename|lower }} main
+    state: present
+  notify:
+    - Update APT cache
+    - Install packages for docker
+
 
 
 # We need support for syntax >= 2 
