Added package mmv

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -46,6 +46,7 @@
 ###     - cups-core-drivers
 ###     - cups-daemon
     - apt-file
+    - mmv
     - tree
     - silversearcher-ag
     - dos2unix
