--- a/roles/dell_xps_15/tasks/main.yml
+++ b/roles/dell_xps_15/tasks/main.yml
@@ -7,3 +7,9 @@
       destfile: /etc/modprobe.d/blacklist.conf 
       regexp: "^blacklist i2c_designware-platform"
       line: blacklist i2c_designware-platform
+
+- name: Install Slack
+  become: yes
+  become_user: root
+  apt:
+    deb: https://downloads.slack-edge.com/linux_releases/slack-desktop-2.6.2-amd64.deb
