Deactivated slack installation
should be installed by adding ppa
deb https://packagecloud.io/slacktechnologies/slack/debian/ jessie main

--- a/roles/dell_xps_15/tasks/main.yml
+++ b/roles/dell_xps_15/tasks/main.yml
@@ -8,8 +8,8 @@
       regexp: "^blacklist i2c_designware-platform"
       line: blacklist i2c_designware-platform
 
-- name: Install Slack
-  become: yes
-  become_user: root
-  apt:
-    deb: https://downloads.slack-edge.com/linux_releases/slack-desktop-2.6.2-amd64.deb
+# - name: Install Slack
+#   become: yes
+#   become_user: root
+#   apt:
+#     deb: https://downloads.slack-edge.com/linux_releases/slack-desktop-2.6.2-amd64.deb
