--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -32,6 +32,8 @@
     name: "{{item}}"
     state: present
   with_items:
+    - smartmontools
+    - gsmartcontrol
     - moreutils
     - valgrind
     - kcachegrind
@@ -45,6 +47,7 @@
 ###     - libcupsmime1
 ###     - cups-core-drivers
 ###     - cups-daemon
+    - openssh-server
     - apt-file
     - mmv
     - tree
@@ -72,6 +75,8 @@
     - python3-dev
     - vim
     - git
+    - git-annex
+    - bup
     - git-gui
     - gcalcli
     - gimp
