Added package speedtest-cli

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -32,6 +32,7 @@
     name: "{{item}}"
     state: present
   with_items:
+    - speedtest-cli
     - smartmontools
     - gsmartcontrol
     - gparted
