Install clang-format 4.0 (required for qtest development)

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -103,7 +103,7 @@
     - vim-syntax-docker
     - cmake
     - clang
-    - clang-format
+    - clang-format-4.0
     - clang-tidy
     - cccc
     - pmccabe
