--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -181,6 +181,9 @@
     - llvm-3.8-dev
     - libqt4-dev
 
+    - eclipse
+    - eclipse-cdt
+
     # packages not available
     # apt-fast
     # skype
