Added nix package manager

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -237,3 +237,8 @@
   sudo: yes
   shell: apt-get install -y nodejs
 
+
+# Nix does not support installation as root via install script
+- name: Install nix package manager
+  shell: curl https://nixos.org/nix/install | sh
+  tags: [xx]
