--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -1,10 +1,12 @@
 ---
 - name: Update APT cache
-  sudo: yes
+  become: yes
+  become_user: root
   shell: apt-get update
 
 - name: Install Samsung Universal printer driver
-  sudo: yes
+  become: yes
+  become_user: root
   apt:
     name: "{{item}}"
     state: present
