--- a/roles/dell_xps_15/tasks/main.yml
+++ b/roles/dell_xps_15/tasks/main.yml
@@ -2,7 +2,8 @@
 
 - name: Fix touch pad palm detection (might not work correctly
   # http://seb.mamessier.com/dell-xps-15-9550-ubuntu-16-04/
-  sudo: yes
+  become: yes
+  become_user: root
   lineinfile: 
       destfile: /etc/modprobe.d/blacklist.conf 
       regexp: "^blacklist i2c_designware-platform"
