--- a/roles/pycharm/handlers/main.yml
+++ b/roles/pycharm/handlers/main.yml
@@ -1,7 +1,8 @@
 ---
 
 - name: install pycharm
-  sudo: yes
+  become: yes
+  become_user: root
   shell: |
       cd {{pycharm_install_dir}}
       tar xzvf /tmp/{{pycharm_archive}}
