--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -45,6 +45,8 @@
     name: "{{item}}"
     state: present
   with_items:
+    - ipython-qtconsole
+    - ipython3-qtconsole
     - ninja-build
     - ninja-build-doc
     - k3b
