Added package inxi

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -46,6 +46,7 @@
     state: present
   with_items:
     - hardinfo
+    - inxi
     - ipython-qtconsole
     - ipython3-qtconsole
     - ninja-build
