Added syntaxtic vim plugin

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -45,6 +45,10 @@
     name: "{{item}}"
     state: present
   with_items:
+    - kompare
+    - python-gi-cairo  # for kompare
+    - meld
+    - diffuse
     - libevent-dev
     - blueman
     - dialog
