--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -45,6 +45,7 @@
     name: "{{item}}"
     state: present
   with_items:
+    - dstat
     - kompare
     - python-gi-cairo  # for kompare
     - meld
